--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,7 +13,8 @@ name = "crab_watch"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.3"
+actix-web = { version = "4.5.1" }
+anyhow = { version = "1.0.80" }
 serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
