--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,7 @@ name = "crab_watch"
 
 [dependencies]
 actix-web = { version = "4.5.1" }
+actix-cors = { version = "0.7.0" }
 anyhow = { version = "1.0.80" }
 serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
