--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -33,6 +33,8 @@ thiserror = "1.0.57"
 tracing-actix-web = "0.7.9"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
+prometheus = "0.13.3"
+actix-web-prom = "0.8.0"
 
 [dev-dependencies]
 reqwest = { version = "0.11.23", features = ["serde_json", "json"] }
