--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,8 +1,9 @@
 global:
-  scrape_interval: 5s
-  evaluation_interval: 30s
+  scrape_interval: 1s
+  evaluation_interval: 5s
 scrape_configs:
   - job_name: actix-monitoring
     honor_labels: true
     static_configs:
-      - targets: ["host.docker.internal:4000"]
+      - targets:
+          - backend-app:3000
