--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -5,8 +5,6 @@ on: push
 defaults:
   run:
     working-directory: backend
-  with:
-    working-directory: backend
 
 jobs:
   build:
@@ -30,8 +28,8 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: |
-            ~/.cargo/registry
-            ~/.cargo/git
+            ~/backend/.cargo/registry
+            ~/backend/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
