--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -1,6 +1,12 @@
 name: Backend CI
 
-on: push
+on:
+  push:
+    paths:
+      - backend/**
+  pull_request:
+    paths:
+      - backend/**
 
 jobs:
   build:
@@ -44,4 +50,5 @@ jobs:
         run: cargo clippy -- -D warnings
 
       - name: Run cargo test
+        if: github.event_name == "pull_request"
         run: cargo test
