--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -50,5 +50,5 @@ jobs:
         run: cargo clippy -- -D warnings
 
       - name: Run cargo test
-        if: github.event_name == "pull_request"
+        if: github.event_name == 'pull_request'
         run: cargo test
